--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.15.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
