--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "@types/next-auth": "^3.15.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
