no semicolons to .env variables

--- a/.env
+++ b/.env
@@ -1,18 +1,23 @@
-#ENVIROMENT VARIABLES
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
 #local connection
-#DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
-#NEXTAUTH_URL="http://localhost:3000"
+DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
+NEXTAUTH_URL="http://localhost:3000"
 
 #vercel postgres
 NEXTAUTH_SECRET="MxGUR1mau5o2IuJxlzr1eNJqXAhXodGx3akJ4gqLbb0="
-POSTGRES_URL="postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
-POSTGRES_URL_NON_POOLING="postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require"
-POSTGRES_USER="neondb_owner"
-POSTGRES_HOST="ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech"
-POSTGRES_PASSWORD="npg_Cl8z6VeurwOY"
-POSTGRES_DATABASE="neondb"
-POSTGRES_URL_NO_SSL="postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb"
-POSTGRES_PRISMA_URL="postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?connect_timeout=15&sslmode=require"
+POSTGRES_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech
+POSTGRES_PASSWORD=npg_Cl8z6VeurwOY
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
 
 
 #Cloudinary save images 
@@ -20,5 +25,4 @@ CLOUDINARY_CLOUD_NAME="djdvmcnqc"
 CLOUDINARY_API_KEY="298858274925386"
 CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
 
-#Strict local api route
 NEXT_PUBLIC_API_URL=http://localhost:3000
