database_url provider

--- a/.env
+++ b/.env
@@ -5,11 +5,24 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 #local connection
-DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
-NEXTAUTH_URL="http://localhost:3000"
+#DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
+#NEXTAUTH_URL="http://localhost:3000"
 
 #vercel postgres
-NEXTAUTH_SECRET="MxGUR1mau5o2IuJxlzr1eNJqXAhXodGx3akJ4gqLbb0="
+# Recommended for most uses
+DATABASE_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech
+PGHOST_UNPOOLED=ep-purple-king-a56u5077.us-east-2.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_Cl8z6VeurwOY
+
+# Parameters for Vercel Postgres Templates
 POSTGRES_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
 POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
 POSTGRES_USER=neondb_owner
