--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
@@ -27,7 +28,6 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.8",
@@ -40,16 +40,15 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@types/node": "^20.17.21",
+    "@types/node": "^20.17.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/ws": "^8.5.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.7.3"
   }
 }
