--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.0",
     "lucide-react": "^0.438.0",
     "next": "^14.2.8",
@@ -43,6 +44,7 @@
     "@types/node": "^20.17.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
