--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@
 #DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
 #NEXTAUTH_URL="http://localhost:3000"
 
+NEXTAUTH_SECRET="A5bCSVFlhBnjYXdPijE6VZOTAYGv68NrP8im/ufWGIk="
+
 #vercel postgres
 # Recommended for most uses
 DATABASE_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
