nextauth public url

--- a/.env
+++ b/.env
@@ -40,4 +40,4 @@ CLOUDINARY_CLOUD_NAME="djdvmcnqc"
 CLOUDINARY_API_KEY="298858274925386"
 CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
 
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://beautyspacecr.vercel.app
