add NEXTAUTH_URL to .env file

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 #local connection
 #DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
-#NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://beautyspacecr.vercel.app"
 
 NEXTAUTH_SECRET="A5bCSVFlhBnjYXdPijE6VZOTAYGv68NrP8im/ufWGIk="
 
