Change prices consts

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 #local connection
+#NEXTAUTH_URL="https://localhost:3000"
 #DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
 NEXTAUTH_URL="https://beautyspacecr.vercel.app"
 
