--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/lib/db.js"
+    "src/lib/db.ts"
   ],
   "exclude": ["node_modules"]
 }
