Cambio de url next_auth y public api url to xbelstudio

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 #local connection
 #NEXTAUTH_URL="https://localhost:3000"
 #DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
-NEXTAUTH_URL="https://beautyspacecr.vercel.app"
+NEXTAUTH_URL="https://xsbelstudio.vercel.app"
 
 NEXTAUTH_SECRET="A5bCSVFlhBnjYXdPijE6VZOTAYGv68NrP8im/ufWGIk="
 
@@ -41,4 +41,4 @@ CLOUDINARY_CLOUD_NAME="djdvmcnqc"
 CLOUDINARY_API_KEY="298858274925386"
 CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
 
-NEXT_PUBLIC_API_URL=https://beautyspacecr.vercel.app
+NEXT_PUBLIC_API_URL=https://xsbelstudio.vercel.app
