add change status cita module

--- a/.env
+++ b/.env
@@ -4,15 +4,20 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-#local connection
-#NEXTAUTH_URL="https://localhost:3000"
-#DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
-NEXTAUTH_URL="https://xsbelstudio.vercel.app"
 
 NEXTAUTH_SECRET="A5bCSVFlhBnjYXdPijE6VZOTAYGv68NrP8im/ufWGIk="
 
+#local connection
+#NEXTAUTH_URL="http://localhost:3000"
+#DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
+#NEXT_PUBLIC_API_URL=http://localhost:3000
+
+# Para cloud development
+NEXTAUTH_URL="https://xsbelstudio.vercel.app"
+NEXT_PUBLIC_API_URL=https://xsbelstudio.vercel.app
+
 #vercel postgres
-# Recommended for most uses
+# Usar esta URL para conectarse a la base de datos en Vercel
 DATABASE_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
 
 # For uses requiring a connection without pgbouncer
@@ -41,4 +46,3 @@ CLOUDINARY_CLOUD_NAME="djdvmcnqc"
 CLOUDINARY_API_KEY="298858274925386"
 CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
 
-NEXT_PUBLIC_API_URL=https://xsbelstudio.vercel.app
