Add google sign in & cejas y pestañas services

--- a/.env
+++ b/.env
@@ -46,3 +46,7 @@ CLOUDINARY_CLOUD_NAME="djdvmcnqc"
 CLOUDINARY_API_KEY="298858274925386"
 CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
 
+# Google OAuth
+GOOGLE_CLIENT_ID=470626319171-eat3plm6c6j34eo5n8ln6tsthrnsbop9.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
