--- a/.env
+++ b/.env
@@ -5,48 +5,48 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
-NEXTAUTH_SECRET="A5bCSVFlhBnjYXdPijE6VZOTAYGv68NrP8im/ufWGIk="
+# NEXTAUTH_SECRET="A5bCSVFlhBnjYXdPijE6VZOTAYGv68NrP8im/ufWGIk="
 
 #local connection
-#NEXTAUTH_URL="http://localhost:3000"
-#DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
-#NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXTAUTH_URL="http://localhost:3000"
+DATABASE_URL="postgresql://postgres:Jitan97@localhost:5432/dbBeauty?schema=public"
+NEXT_PUBLIC_API_URL=http://localhost:3000
 
 # Para cloud development
-NEXTAUTH_URL="https://xsbelstudio.vercel.app"
-NEXT_PUBLIC_API_URL=https://xsbelstudio.vercel.app
+# NEXTAUTH_URL="https://xsbelstudio.vercel.app"
+# NEXT_PUBLIC_API_URL=https://xsbelstudio.vercel.app
 
 #vercel postgres
 # Usar esta URL para conectarse a la base de datos en Vercel
-DATABASE_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
+# DATABASE_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
 
 # For uses requiring a connection without pgbouncer
-DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
+# DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
 
 # Parameters for constructing your own connection string
-PGHOST=ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech
-PGHOST_UNPOOLED=ep-purple-king-a56u5077.us-east-2.aws.neon.tech
-PGUSER=neondb_owner
-PGDATABASE=neondb
-PGPASSWORD=npg_Cl8z6VeurwOY
+# PGHOST=ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech
+# PGHOST_UNPOOLED=ep-purple-king-a56u5077.us-east-2.aws.neon.tech
+# PGUSER=neondb_owner
+# PGDATABASE=neondb
+# PGPASSWORD=npg_Cl8z6VeurwOY
 
 # Parameters for Vercel Postgres Templates
-POSTGRES_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
-POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
-POSTGRES_USER=neondb_owner
-POSTGRES_HOST=ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech
-POSTGRES_PASSWORD=npg_Cl8z6VeurwOY
-POSTGRES_DATABASE=neondb
-POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb
-POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
+# POSTGRES_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
+# POSTGRES_URL_NON_POOLING=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077.us-east-2.aws.neon.tech/neondb?sslmode=require
+# POSTGRES_USER=neondb_owner
+# POSTGRES_HOST=ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech
+# POSTGRES_PASSWORD=npg_Cl8z6VeurwOY
+# POSTGRES_DATABASE=neondb
+# POSTGRES_URL_NO_SSL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb
+# POSTGRES_PRISMA_URL=postgres://neondb_owner:npg_Cl8z6VeurwOY@ep-purple-king-a56u5077-pooler.us-east-2.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
 
 
 #Cloudinary save images 
-CLOUDINARY_CLOUD_NAME="djdvmcnqc"
-CLOUDINARY_API_KEY="298858274925386"
-CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
+# CLOUDINARY_CLOUD_NAME="djdvmcnqc"
+# CLOUDINARY_API_KEY="298858274925386"
+# CLOUDINARY_API_SECRET="C6zbsEJg6Zuur2lEn-eodFNFoEo"
 
 # Google OAuth
-GOOGLE_CLIENT_ID=470626319171-eat3plm6c6j34eo5n8ln6tsthrnsbop9.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+# GOOGLE_CLIENT_ID=470626319171-eat3plm6c6j34eo5n8ln6tsthrnsbop9.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
 
