--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
 .env
+.env*
+.env.local
+.env.development
+.env.production
 
 # vercel
 .vercel
